# social_automation

./: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  PLANEJAMENTO_MULTIPLE_CREATOR_E_BANCO_VIDEO.md  README.md  checklist_reinicio_factory.txt  conftest.py  docker-compose.yml  inicio.txt  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  sequencia.txt  setup_outro_pc_docker.txt  start_celery.bat  start_celery_beat.bat  start_celery_publish.bat  to_doxai.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/api/: dashboard_metrics.py  factory_youtube_dashboard.py  pagination.py  serializers.py  urls.py  views.py
apps/auto_cuts/: admin.py  apps.py  models.py  tasks.py
apps/brands/: admin.py  models.py
apps/common/: __init__.py  metrics.py  queue_backlog.py  task_observability.py
apps/cuts/: admin.py  apps.py  models.py  services.py  tasks.py
apps/jobs/: admin.py  logging_utils.py  models.py  tasks.py  tasks_auto_fetch.py
apps/mediahub/: admin.py  apps.py  models.py
config/: __init__.py  celery.py
docs/: ALERTING_RUNBOOK.md  API.md  ARCHITECTURE.md  AUTO_CUTS_STRATEGY.md  CORTES_AUTOMATICOS_ESTRATEGIA.md  DADOS_POSTAGEM_POR_PLATAFORMA.md  DEBUG_GPU.md  FACTORY_MULTICANAL_PLAN.md  LEGENDAS_DESIGN.md  MULTIPLE_CREATOR.md  OBSERVABILITY.md  PLANO_FACTORY_MULTICANAL.md  PLANO_POSTAGEM_REDES.md  PLANO_POSTAGEM_YOUTUBE.md  POSTGRESQL.md  POSTING_DATA_BY_PLATFORM.md  SOCIAL_NETWORKS_POSTING_PLAN.md  SUBTITLES_DESIGN.md  YOUTUBE_POSTING_PLAN.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
monitoring/: alert_rules.yml  prometheus.yml
scripts/: README_BACKUP.md  backup_postgres.ps1  restore_postgres.ps1
social_automation/: __init__.py  asgi.py  metrics_view.py  settings.py  settings_test.py  urls.py  wsgi.py
(+229 files in other folders)
